tried to fix blink on iOS7 not fixed yet

--- a/cordova/platforms/ios/www/styles/main.styl
+++ b/cordova/platforms/ios/www/styles/main.styl
@@ -21,7 +21,12 @@ html, body
   height: 100%
   color:#000 !important
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif
-  height: 100%;
+
+.main-container
+  position: absolute
+  width: 100%
+  height: 100%
+  overflow:hidden
 
 brad()
   -webkit-border-radius arguments
@@ -57,7 +62,7 @@ button:active
   position:relative
   display:inline-block
   width:100%
-  height:400px
+  height:100%
   -webkit-overflow-scrolling: touch
   overflow-y:auto
  
