--- a/cordova/www/styles/main.styl
+++ b/cordova/www/styles/main.styl
@@ -21,7 +21,14 @@ html, body
   height: 100%
   color:#000 !important
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif
-  height: 100%;
+
+.main-container
+  position: fixed
+  width: 100%
+  height: 100%
+  overflow:hidden
+  top:0px
+  left:0px
 
 brad()
   -webkit-border-radius arguments
@@ -57,9 +64,10 @@ button:active
   position:relative
   display:inline-block
   width:100%
-  height:400px
+  height:100%
   -webkit-overflow-scrolling: touch
   overflow-y:auto
+  overflow-x:hidden
  
 .no
   display:none
@@ -434,3 +442,12 @@ button:active
   top:-6px
   font-size:1.3em
   font-weight:300
+
+.main-containe, div
+  backface-visibility:hidden
+  -webkit-backface-visibility:hidden
+  -moz-backface-visibility:hidden
+
+
+.main-container
+  -webkit-backface-visibility: hidden
